<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/usage"
        android:icon="@drawable/ic_data_usage"
        android:title="@string/usage"
        app:showAsAction="always" />
    <item
        android:id="@+id/bundle"
        android:icon="@drawable/ic_box"
        android:title="@string/bundles"
        app:showAsAction="always" />
    <item
        android:id="@+id/latest"
        android:icon="@drawable/ic_latest"
        android:title="@string/latest"
        app:showAsAction="always" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_squares"
        android:title="@string/more"
        app:showAsAction="always" />

</menu>