<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8sdp"
    tools:context=".usageFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/usage_cv"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true"
        app:elevation="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp">

            <ImageView
                android:id="@+id/usage_wifi"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/ic_wifi"
                app:layout_constraintBottom_toTopOf="@id/usage_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usage_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toTopOf="@id/usage_reminder"
                app:layout_constraintEnd_toStartOf="@id/usage_mb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usage_wifi" />

            <TextView
                android:id="@+id/usage_mb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mb"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/usage_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/usage_number"
                app:layout_constraintTop_toTopOf="@id/usage_number" />

            <TextView
                android:id="@+id/usage_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining"
                android:textColor="@color/black"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toTopOf="@id/usage_progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usage_number" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/usage_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="70"
                android:progressTint="@color/red"
                app:layout_constraintBottom_toTopOf="@id/usage_usage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usage_reminder" />

            <TextView
                android:id="@+id/usage_usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/offers"
                android:textColor="@color/black"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/usage_progress"
                app:layout_constraintStart_toStartOf="@id/usage_progress"
                app:layout_constraintTop_toBottomOf="@+id/usage_progress" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sub_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/subscription_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@id/usage_cv"
        app:layout_constraintTop_toBottomOf="@id/usage_cv" />
    
    <androidx.cardview.widget.CardView
        android:id="@+id/plan_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true"
        app:elevation="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/sub_details"
        app:layout_constraintTop_toBottomOf="@id/sub_details">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/plan_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="@string/mbb"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toTopOf="@id/view1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/_3250pkr"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/view1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/plan_tv" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@color/black"
                app:layout_constraintBottom_toTopOf="@id/timeOffer_tv"
                app:layout_constraintEnd_toEndOf="@id/price_tv"
                app:layout_constraintStart_toStartOf="@id/plan_tv"
                app:layout_constraintTop_toBottomOf="@id/price_tv" />

            <TextView
                android:id="@+id/timeOffer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/time"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/plan_tv"
                app:layout_constraintTop_toBottomOf="@id/view1" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/timeOffer_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:max="100"
                android:progress="70"
                android:progressTint="@color/colorPrimary"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1"

                />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123"
                app:layout_constraintEnd_toEndOf="@id/timeOffer_progress"
                app:layout_constraintTop_toBottomOf="@id/timeOffer_progress" />

            <TextView
                android:id="@+id/noTime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/time"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/plan_tv"
                app:layout_constraintTop_toBottomOf="@id/timeOffer_tv" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/noTime_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:max="100"
                android:progress="40"
                android:progressTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/value"

                />

            <TextView
                android:id="@+id/value2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123"
                app:layout_constraintEnd_toEndOf="@id/noTime_progress"
                app:layout_constraintTop_toBottomOf="@id/noTime_progress" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/re_subscribe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightRed"
                android:text="@string/re_subscribe"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:theme="@style/AppTheme1"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/value2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/un_subscribe"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/un_subscribe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/unsubcribe"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_8sdp"
                android:theme="@style/AppTheme1"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/re_subscribe"
                app:layout_constraintStart_toEndOf="@id/favourate"
                app:layout_constraintTop_toBottomOf="@id/value2" />

            <ImageView
                android:id="@+id/favourate"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_favourate"
                android:scaleType="center"
                app:tint="@color/colorPrimary"
                android:background="@drawable/button_background"
                android:theme="@style/AppTheme1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/value2"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>